--- a/src/posts/published/why-use-use-reducer/index.mdx
+++ b/src/posts/published/why-use-use-reducer/index.mdx
@@ -369,34 +369,12 @@ const reducer = (state, event) => {
 Lastly, we need to update our `TICK` event to update `jumpsRemaining` when we hit the "ground".
 
 ```javascript
-const reducer = (state, event) => {
-  switch (event) {
-    //...
-
-    case 'TICK': {
-      if (state.ballState === 'idle') return state
-
-      const nextDelta = state.delta - GRAVITY
-      const nextPosition = state.position + nextDelta
-
-      if (nextPosition <= 0) {
-        return initialState
-      }
-
-      return {
-        ...state,
-        ballState: 'jumping',
-        delta: nextDelta,
-        position: nextPosition,
-      }
-    }
-
-    //...
-  }
-}
+// Not a mistake, purposely empty
 ```
 
-Now let's see how our ball jumps!
+**Wait**! There's nothing to update. It's already handled by setting `state` to `initialState` when the ball hits the ground. Yet another benefit of using a reducer is that occasionally we can update multiple states in one fell swoop by resetting it to `initialState` (or some other permutation of the state object).
+
+Now let's see how our ball _double_ jumps!
 
 <Margin vert={2}>
   <ReducerJumpingBall />
