--- a/src/posts/published/event-capture-in-react/index.mdx
+++ b/src/posts/published/event-capture-in-react/index.mdx
@@ -12,7 +12,7 @@ relatedPostsSlugs: []
 import Breakfast from './Breakfast'
 import EventButton from './EventButton'
 
-So... as of the time I'm writing this, I've used React for 7 years and **today** (February 22, 2022) I learned something completely unbeknownst to me. <Marker content="Yes, it took me 4 months to get back to this and write the last few paragragphs, lol." /> **You can append** `Capture` **to an event name to have it handled in the "capture" phase of event delegation, instead of the "bubbling" phase**. Who knew?! It's [right here in the docs](https://reactjs.org/docs/events.html#supported-events).
+So... as of the time I'm writing this, I've used React for 7 years and **today** (February 22, 2022) I learned something completely unbeknownst to me. <Marker content="Yes, it took me 4 months to get back to this and write the last few paragraphs, lol." /> **You can append** `Capture` **to an event name to have it handled in the "capture" phase of event delegation, instead of the "bubbling" phase**. Who knew?! It's [right here in the docs](https://reactjs.org/docs/events.html#supported-events).
 
 So what is this and why is it useful? Let's explore.
 
