fix typo; silly double negatives

--- a/src/snippets/use-async-safe-state.mdx
+++ b/src/snippets/use-async-safe-state.mdx
@@ -25,7 +25,7 @@ function useAsyncSafeState(value) {
 
   // Prevent `setState` calls after the component unmounts
   const safeSetState = React.useCallback(update => {
-    if (!isMounted) {
+    if (isMounted) {
       setState(update)
     }
   }, [])
