small upgrade of packages and node version to 16

--- a/src/posts/published/how-to-use-usereducer-as-a-finite-state-machine/index.mdx
+++ b/src/posts/published/how-to-use-usereducer-as-a-finite-state-machine/index.mdx
@@ -89,7 +89,9 @@ function LightBulb() {
 
 You can see it in action right here. Be sure to click buttons a state _shouldn't_ respond to as well! <Marker content="You can check out my blog repo for more details on how I implemented <code>reset</code> in my reducer here." />
 
-<LightBulb />
+<OffsetWrap>
+  <LightBulb />
+</OffsetWrap>
 
 ### Types
 
