--- a/src/posts/published/use-state-vs-use-ref/index.mdx
+++ b/src/posts/published/use-state-vs-use-ref/index.mdx
@@ -18,7 +18,7 @@ When I discuss React with people, I often hear that others find `useRef` to be c
 
 Before we get into the specific differences, I want to share a realization I recently had. I realized that the standard React Hooks come in four categories:
 
-<Margin vert={2}>
+<Margin vertical={2}>
   <HookCategories />
 </Margin>
 
@@ -75,7 +75,7 @@ function Box() {
 
 And let's see it in action.
 
-<Margin vert={2}>
+<Margin vertical={2}>
   <RandomBox />
 </Margin>
 
@@ -96,7 +96,7 @@ function RefBox() {
 }
 ```
 
-<Margin vert={2}>
+<Margin vertical={2}>
   <RefRandomBox />
 </Margin>
 
@@ -144,7 +144,7 @@ function BackgroundCounter() {
 
 And let's see how that works.
 
-<Margin vert={2}>
+<Margin vertical={2}>
   <BackgroundCounter />
 </Margin>
 
