--- a/src/posts/published/why-use-use-reducer/index.mdx
+++ b/src/posts/published/why-use-use-reducer/index.mdx
@@ -76,7 +76,7 @@ If you answered "Yes" to any of these questions, then you might have a good use 
 
 Here I have a little jumping ball. Go ahead. Make it jump by clicking the button labeled "Jump".
 
-<Margin vert={2}>
+<Margin vertical={2}>
   <JumpingBall />
 </Margin>
 
@@ -376,7 +376,7 @@ Lastly, we need to update our `TICK` event to update `jumpsRemaining` when we hi
 
 Now let's see how our ball _double_ jumps!
 
-<Margin vert={2}>
+<Margin vertical={2}>
   <ReducerJumpingBall />
 </Margin>
 
