tidy up frontmatter

--- a/src/posts/published/algorithms-bubble-sort/index.mdx
+++ b/src/posts/published/algorithms-bubble-sort/index.mdx
@@ -6,7 +6,7 @@ subtitle: null
 description: 'Learn the bubble sort algorithm in JavaScript, and why it is such a bad way to sort items'
 excerpt: "Sorting algorithms can be a lot of fun to learn, so let's learn and visualize the bubble sort algorithm in JavaScript."
 tags: ['Data Structures and Algorithms']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['algorithms-insertion-sort']
 relevantCourseNickname: 'dsa'
 ---
 
