--- a/src/posts/published/algorithms-insertion-sort/index.mdx
+++ b/src/posts/published/algorithms-insertion-sort/index.mdx
@@ -3,10 +3,11 @@ date: '2023-01-22'
 slug: 'algorithms-insertion-sort'
 title: 'Algorithms: Insertion Sort'
 subtitle: null
-description: ''
-excerpt: null
+description: 'Learn the insertion sort algorithm in JavaScript and why it is slightly better than bubble sort'
+excerpt: "Let's improve upon our bubble sort algorithm with insertion sort and learn how to reduce unnecessary comparisons."
 tags: ['Data Structures and Algorithms']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['algorithms-bubble-sort']
+relevantCourseNickname: 'dsa'
 ---
 
 import { InsertionSortVisual } from './InsertionSortVisual'
