fix missing word

--- a/src/posts/published/context-composition-and-flexibility/index.mdx
+++ b/src/posts/published/context-composition-and-flexibility/index.mdx
@@ -11,7 +11,7 @@ relatedPostsSlugs: ['how-to-use-react-context-effectively']
 
 import { OurInput, OurInputStyleProvider } from './OurInput'
 
-Recently, I had the following situation at work. It has been adapted to **less** professional and **more** humorous:
+Recently, I had the following situation at work. It has been adapted to be **less** professional and **more** humorous:
 
 <hr />
 
